--- a/index.html
+++ b/index.html
@@ -12,7 +12,24 @@
     <meta property="og:image" content="https://yourwebsite.com/images/hero-image.jpg">
     <meta property="og:url" content="https://yourwebsite.com">
     <meta name="twitter:card" content="summary_large_image">
+<nav>
+        <!-- Logo and Title -->
+        <div class="logo-container">
+            <img src="images/logo.png" alt="JRSN IT TECH Logo" class="logo-image">
+            <div class="logo">JRSN IT TECH</div>
+        </div>
 
+        <!-- Menu Icon for Mobile -->
+        <div class="menu-icon" onclick="toggleNav()">&#9776;</div>
+
+        <!-- Navigation Links -->
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
     <title>JRSN IT TECH - Professional IT Solutions</title>
 
     <!-- Favicon -->
