--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <nav>
         <!-- Logo and Title -->
         <div class="logo-container">
-            <img src="images/logo.png" alt="JRSN IT TECH Logo" class="logo-image">
+            <img src="images/logo.jpg" alt="JRSN IT TECH Logo" class="logo-image">
             <div class="logo">JRSN IT TECH</div>
         </div>
 
