--- a/index.html
+++ b/index.html
@@ -12,10 +12,23 @@
     <meta property="og:image" content="https://yourwebsite.com/images/hero-image.jpg">
     <meta property="og:url" content="https://yourwebsite.com">
     <meta name="twitter:card" content="summary_large_image">
-<nav>
+
+    <title>JRSN IT TECH - Professional IT Solutions</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <!-- Link to CSS -->
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+    <!-- Header -->
+    <header>
+    <nav>
         <!-- Logo and Title -->
         <div class="logo-container">
-            <img src="images/logo.jpg" alt="JRSN IT TECH Logo" class="logo-image">
+            <img src="images/logo.png" alt="JRSN IT TECH Logo" class="logo-image">
             <div class="logo">JRSN IT TECH</div>
         </div>
 
@@ -30,29 +43,7 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
-    <title>JRSN IT TECH - Professional IT Solutions</title>
-
-    <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-
-    <!-- Link to CSS -->
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-
-    <!-- Header -->
-    <header>
-        <nav>
-            <div class="logo">JRSN IT TECH</div>
-            <div class="menu-icon" onclick="toggleNav()">&#9776;</div>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+</header>
 
     <!-- Side Navigation for Mobile -->
     <div class="side-nav" id="sideNav">
