--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 
     <!-- Image Animation Gallery -->
     <section class="gallery">
-        <img src="images/gallery1.jpg" alt="Service Image 1">
-        <img src="images/gallery2.jpg" alt="Service Image 2">
-        <img src="images/gallery3.jpg" alt="Service Image 3">
+        <img src="images/gallery1.png" alt="Service Image 1">
+        <img src="images/gallery2.png" alt="Service Image 2">
+        <img src="images/gallery3.png" alt="Service Image 3">
     </section>
 
     <!-- Services Section -->
