--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="JRSN IT TECH">
     <meta property="og:title" content="JRSN IT TECH - Professional IT Solutions">
     <meta property="og:description" content="Comprehensive IT services for businesses and individuals. Expert solutions in hardware servicing, CCTV design, data recovery, internet provider services, and Piso WiFi vendo machines.">
-    <meta property="og:image" content="https://yourwebsite.com/images/hero-image.jpg">
+    <meta property="og:image" content="https://yourwebsite.com/images/hero-image.png">
     <meta property="og:url" content="https://yourwebsite.com">
     <meta name="twitter:card" content="summary_large_image">
 
