--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <!-- About Us Section -->
     <section class="about" id="about">
         <h2>About Us</h2>
-        <img src="images/about-us.jpg" alt="About JRSN IT TECH">
+        <img src="images/about-us.png" alt="About JRSN IT TECH">
         <p>JRSN IT TECH is dedicated to delivering premium IT solutions with professionalism and expertise. Our team of certified technicians ensures your technology runs smoothly, securely, and efficiently. From hardware repairs to internet solutions, we’ve got you covered!</p>
     </section>
 
