--- a/index.html
+++ b/index.html
@@ -125,5 +125,8 @@
         <p><a href="mailto:[Insert Email Address]">Email Us</a> | <a href="tel:[Insert Phone Number]">Call Us</a></p>
     </footer>
 
+    <!-- Link to JavaScript -->
+    <script src="script.js"></script>
+
 </body>
 </html>
