--- a/index.html
+++ b/index.html
@@ -95,42 +95,9 @@
         </div>
     </section>
 
-    <!-- Services Modal -->
-    <div id="servicesModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('servicesModal')">&times;</span>
-            <h2>Our Services</h2>
-            <div>
-                <img src="images/hardware-icon.png" alt="Computer Hardware Servicing">
-                <h3>Computer Hardware Servicing</h3>
-                <p>We repair, upgrade, and maintain all types of computer hardware to ensure optimal performance.</p>
-            </div>
-            <div>
-                <img src="images/cctv-icon.png" alt="CCTV Installation & Design">
-                <h3>CCTV Installation & Design</h3>
-                <p>State-of-the-art surveillance systems tailored to your security needs.</p>
-            </div>
-            <div>
-                <img src="images/recovery-icon.png" alt="Windows Recovery & Data Retrieval">
-                <h3>Windows Recovery & Data Retrieval</h3>
-                <p>Password resets, system recovery, and secure data retrieval services.</p>
-            </div>
-            <div>
-                <img src="images/internet-icon.png" alt="Internet Provider Services">
-                <h3>Internet Provider Services</h3>
-                <p>Reliable and high-speed internet solutions for homes and businesses.</p>
-            </div>
-            <div>
-                <img src="images/piso-wifi-icon.png" alt="Piso WiFi Vendo Machines">
-                <h3>Piso WiFi Vendo Machines</h3>
-                <p>Turnkey Piso WiFi solutions for entrepreneurs and small businesses.</p>
-            </div>
-        </div>
-    </div>
-
     <!-- About Us Modal -->
-    <div id="aboutModal" class="modal">
-        <div class="modal-content"></div>
+    <div id="aboutModal" class="modal" style="display: none;">
+        <div class="modal-content">
             <span class="close" onclick="closeModal('aboutModal')">&times;</span>
             <h2>About Us</h2>
             <img src="images/logo.jpg" alt="About JRSN IT TECH">
@@ -139,7 +106,7 @@
     </div>
 
     <!-- Contact Modal -->
-    <div id="contactModal" class="modal">
+    <div id="contactModal" class="modal" style="display: none;">
         <div class="modal-content">
             <span class="close" onclick="closeModal('contactModal')">&times;</span>
             <h2>Contact Us</h2>
@@ -154,10 +121,12 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2015 jemenezjerson. All rights reserved.</p>
-        <p><a href="mailto:[Insert Email Address]">Email Us</a> | <a href="tel:[Insert Phone Number]">Call Us</a></p>
+        <div class="footer" id="footer">
+        <p>&copy; 2015 JERSON MATA JEMENEZ</p>
+        <p><a href="mailto:atjrzzz@gmail.com">Email Us</a> | <a href="tel:09484577044">Call Us</a></p>
+        </div>
     </footer>
-
+   
     <!-- Link to JavaScript -->
     <script src="script.js"></script>
 
